Fix Spinner loading animation + sent message on mobile ui glitch

--- a/picksight_app/static/css/masonry.css
+++ b/picksight_app/static/css/masonry.css
@@ -119,6 +119,14 @@ img, video {
   }
 }
 
+/* Masonry on tablets */
+@media only screen and (max-width: 410px) {
+  #step2 {
+    padding: 0.5rem;
+    padding-top: 30px;
+  }
+}
+
 /*------------------Snackbar ----------------------------*/
 
 #snackbar {
